--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Escandallo | 101 Grados</title>
+    <title>Escandallo | ITI</title>
     <meta
       name="description"
       content="High performance React template built with lots of powerful MUI (Material-UI) components across multiple product niches for fast & perfect apps development processes."
